# k8s-lab-all-in-one

./: .gitignore  GETTING_STARTED.md  README.md  TODO.md  build-all.sh  cleanup.sh  deploy-all.sh  deploy-prometheus.sh  kind-config.yaml  setup-cluster.sh  test-resource-limits.sh  test.md
.github/workflows/: ci.yaml
apps/api-node/: Dockerfile  package.json  server.js
apps/batch-python/: Dockerfile  main.py  requirements.txt
apps/web-go/: Dockerfile  go.mod  main.go
charts/api-node/: Chart.yaml  values.yaml
charts/batch-python/: .helmignore  Chart.yaml  values.yaml
charts/web-go/: Chart.yaml  values.yaml
infra/kind/: kind-config.yaml
manifests/dev/: batch-api-deployment.yaml  batch-api-service.yaml  batch-worker-deployment.yaml  cpu-stress-test.yaml  echo-deployment.yaml  echo-service.yaml  memory-stress-test.yaml  metrics-deployment.yaml  metrics-service.yaml  redis-deployment.yaml  redis-service.yaml  shortener-deployment.yaml  shortener-service.yaml  thumb-deployment.yaml  thumb-service.yaml
manifests/ha/: batch-api-deployment.yaml  batch-api-service.yaml  batch-worker-deployment.yaml  echo-deployment.yaml  echo-service.yaml  metrics-deployment.yaml  redis-deployment.yaml  redis-service.yaml  shortener-deployment.yaml  shortener-service.yaml  thumb-deployment.yaml  thumb-service.yaml
manifests/prometheus/: kube-state-metrics.yaml  prometheus-configmap.yaml  (+2 more)
scripts/: export-metrics.py  load-test.sh  up-kind.sh
services/echo/: Cargo.toml  Dockerfile  build.sh  deploy.sh
services/echo/src/: main.rs
services/echo/src/static/: index.html
(+60 files in other folders)
