[package]
name = "echo-ws"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4.3"
actix-web-actors = "4.2"
actix-cors = "0.6"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
